# whisperX

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: python-compatibility.yml  release.yml  tests.yml  wheels.yml
tests/: test_cli_parser.py  test_hotword_extract.py
whisperx/: __init__.py  __main__.py  alignment.py  asr.py  hotword_extract.py  log_utils.py  profile_align.py  transcribe.py
whisperx/vads/: silero.py
