[project]
urls = { repository = "https://github.com/m-bain/whisperx" }
authors = [{ name = "Max Bain" }]
name = "whisperx"
version = "3.10.1"
description = "Time-Accurate Automatic Speech Recognition using Whisper."
readme = "README.md"
requires-python = ">=3.12, <3.15"
license = { text = "BSD-2-Clause" }

dependencies = [
    "ctranslate2>=4.5.0",
    "faster-whisper>=1.2.0",
    "nltk>=3.9.1",
    "numpy>=2.1.0",
    "omegaconf>=2.3.0",
    "pandas>=2.2.3",
    "pyannote-audio>=4.0.0",
    "huggingface-hub<1.0.0",
    "torch>=2.8,<3",
    "torchaudio>=2.8,<3",
    "torchvision>=0.23,<1",
    "torchcodec>=0.6.0,<1; (sys_platform == 'linux' and platform_machine == 'x86_64') or sys_platform == 'darwin' or sys_platform == 'win32'",
    "transformers>=4.48.0",
    "triton>=3.3.0; sys_platform == 'linux' and platform_machine == 'x86_64'" # only install triton on x86_64 Linux
]


[project.optional-dependencies]
dev = ["pytest"]
profile = ["py-spy>=0.4", "scalene>=1.5"]

[project.scripts]
whisperx = "whisperx.__main__:cli"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "crates/whisperx_ext/Cargo.toml"
module-name = "whisperx_ext"
python-packages = ["whisperx"]
exclude = ["crates/whisperx_ext/target/**/*"]

# torchcodec (transitive dep of pyannote-audio >=4) has no wheels for Linux aarch64
[tool.uv]
override-dependencies = [
    "torchcodec>=0.6.0,<1; (sys_platform == 'linux' and platform_machine == 'x86_64') or sys_platform == 'darwin' or sys_platform == 'win32'",
]

# torch / torchaudio / torchvision now resolve from PyPI on every platform.
# Consumers who need CUDA wheels can pass an explicit --extra-index-url at
# install time, e.g. `pip install whisperx --extra-index-url https://download.pytorch.org/whl/cu128`.
